tests/ui/traits/negative-bounds/opaque-type-unsatisfied-fn-bound.stderr
error[E0308]: mismatched types
  --> $DIR/opaque-type-unsatisfied-fn-bound.rs:5:34
   |
LL | fn produce() -> impl !Fn<(u32,)> {}
   |                 ---------------- ^^ types differ
   |                 |
   |                 the expected opaque type
   |
   = note: expected opaque type `impl !Fn<(u32,)>`
                found unit type `()`

error[E0271]: type mismatch resolving `() == impl !Fn<(u32,)>`
  --> $DIR/opaque-type-unsatisfied-fn-bound.rs:5:17
   |
LL | fn produce() -> impl !Fn<(u32,)> {}
   |                 ^^^^^^^^^^^^^^^^ types differ

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0271, E0308.
For more information about an error, try `rustc --explain E0271`.
